Prevent blurry of the inline bookmark icon while zooming in the browser.

--- a/packages/ckeditor5-bookmark/theme/bookmark.css
+++ b/packages/ckeditor5-bookmark/theme/bookmark.css
@@ -41,9 +41,11 @@
 			top: -0.1em;
 
 			& .ck-icon {
-				height: 1.2em;
+				height: 1.25em;
 				width: auto;
 				vertical-align: middle;
+				/* Overwrite the `.ck-icon` property to prevent the icon from being blurry while using zooming in. */
+				will-change: unset;
 			}
 		}
 	}
